# scenes/main.tscn
[gd_scene load_steps=5 format=3 uid="uid://b00tmg8c67a3"]

[ext_resource type="Script" path="res://scripts/PXDisplayNode.gd" id="1_d758g"]
[ext_resource type="Script" path="res://scripts/PXDebugger.gd" id="2_r20p5"]
[ext_resource type="Script" path="res://scripts/PXGPUDriver.gd" id="3_6j1sa"]
[ext_resource type="Shader" uid="uid://cx600q8v38e4" path="res://shaders/data_passthrough_shader.gdshader" id="4_n4i65"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PXDisplayNode" type="Control" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_d758g")
canvas_width = 64
canvas_height = 64
pixel_size = 8

[node name="PXGPUDriver" type="Node2D" parent="PXDisplayNode"]
position = Vector2(10, 10)
script = ExtResource("3_6j1sa")
canvas_width = 64
canvas_height = 64
pixel_size = 8

[node name="Viewport_OpcodeA" type="SubViewport" parent="PXDisplayNode/PXGPUDriver"]
transparent_bg = true
size = Vector2i(64, 64)
render_target_update_mode = 3 # RENDER_TARGET_UPDATE_ALWAYS

[node name="Viewport_OpcodeB" type="SubViewport" parent="PXDisplayNode/PXGPUDriver"]
transparent_bg = true
size = Vector2i(64, 64)
render_target_update_mode = 3 # RENDER_TARGET_UPDATE_ALWAYS

[node name="Viewport_DataA" type="SubViewport" parent="PXDisplayNode/PXGPUDriver"]
transparent_bg = false
size = Vector2i(64, 64)
render_target_update_mode = 3 # RENDER_TARGET_UPDATE_ALWAYS

[node name="Viewport_DataB" type="SubViewport" parent="PXDisplayNode/PXGPUDriver"]
transparent_bg = false
size = Vector2i(64, 64)
render_target_update_mode = 3 # RENDER_TARGET_UPDATE_ALWAYS

[node name="Viewport_Injection" type="SubViewport" parent="PXDisplayNode/PXGPUDriver"]
transparent_bg = true
size = Vector2i(64, 64)
render_target_update_mode = 3 # RENDER_TARGET_UPDATE_ALWAYS

[node name="TextureRectDisplay" type="TextureRect" parent="PXDisplayNode/PXGPUDriver"]
layout_mode = 0
texture_filter = 1 # TEXTURE_FILTER_NEAREST
expand_mode = 1 # EXPAND_IGNORE_SIZE
custom_minimum_size = Vector2(512, 512)


[node name="PXDebugger" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 500.0
grow_horizontal = 0
script = ExtResource("2_r20p5")

[node name="VBoxContainer" type="VBoxContainer" parent="PXDebugger"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 0

[node name="DebugLogLabel" type="Label" parent="PXDebugger/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Debug Log:"
autowrap_mode = 2

[node name="PixelInfoLabel" type="Label" parent="PXDebugger/VBoxContainer"]
layout_mode = 2
text = "Pixel Info: N/A"
autowrap_mode = 2

[node name="HoverInfoLabel" type="Label" parent="PXDebugger/VBoxContainer"]
layout_mode = 2
text = "Hover: N/A"
autowrap_mode = 2

[node name="TimelineHBoxContainer" type="HBoxContainer" parent="PXDebugger/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="PXDebugger/VBoxContainer/TimelineHBoxContainer"]
layout_mode = 2
text = "Timeline:"
vertical_alignment = 1

[node name="TimelinePanel" type="Panel" parent="PXDebugger/VBoxContainer/TimelineHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimelineScrollContainer" type="ScrollContainer" parent="PXDebugger/VBoxContainer/TimelineHBoxContainer/TimelinePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3

[node name="TimelineGridContainer" type="GridContainer" parent="PXDebugger/VBoxContainer/TimelineHBoxContainer/TimelinePanel/TimelineScrollContainer"]
layout_mode = 2
columns = 10